# SquireCore

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Shuttle.toml  bindgen.py  build.rs  build.sh  cbindgen.toml  cobertura.xml  docker-compose.yml  ffi_build.bat  ffi_build.sh  format.sh  postprocess.py  rusty-tags.vi  squire_core.h
.github/: dependabot.yml
.github/workflows/: ci.yml  cleaniness.yml  coverage.yml  squire_core_ci.yml  squire_lib_ci.yml  squire_sdk_ci.yml  squire_web_ci.yml
.history/: README_20231006080637.md  README_20231007103832.md  README_20231011175209.md  README_20231011175726.md
.history/squire_lib/: README_20231006202849.md  README_20231007103552.md  README_20231007103607.md  (+1 more)
assets/: index.html
docker_build/: Dockerfile
docs/: README.md  SwissPairingAlgorithm.md
reference/: README.md  graphql_schema.rs
squire_core/: Cargo.toml  Dockerfile  build.rs
squire_core/src/: accounts.rs  assets.rs  cards.rs  main.rs  players.rs  session.rs  state.rs  tournaments.rs
squire_core/src/state/: accounts.rs  boilerplate.rs  mod.rs  session.rs  tournaments.rs
squire_core/src/state/user_profile/: iter.rs
squire_core/src/tests/: init.rs  mod.rs  requests.rs  state.rs  tournaments.rs  utils.rs
squire_lib/: Cargo.toml  README.md  bindgen.py  tmp
squire_lib/src/: account_rules.rs  accounts.rs  admin.rs  error.rs  ffi.rs  ffi_player.rs  ffi_rounds.rs  ffi_tournament.rs  fluid_pairings.rs  identifiers.rs  lib.rs  operations.rs  pairings.rs  player.rs  player_registry.rs  round.rs  round_registry.rs  scoring.rs  settings.rs  standard_scoring.rs  swiss_pairings.rs  tournament.rs  tournament_manager.rs  tournament_seed.rs  utils.rs
squire_lib/src/boilerplate/: convert.rs  default.rs  display.rs  mod.rs
squire_lib/src/ffi/: ffi_player.rs  ffi_rounds.rs  ffi_tournament.rs  mod.rs
squire_lib/src/operations/: admin_ops.rs  judge_ops.rs  mod.rs  op_log.rs  op_sync.rs  player_ops.rs
squire_lib/src/pairings/: branching.rs  fluid_pairings.rs  greedy.rs  mod.rs  rotary.rs  swiss_pairings.rs
squire_lib/src/player/: mod.rs  player_registry.rs
squire_lib/src/players/: mod.rs  player_registry.rs
squire_lib/src/round/: mod.rs  round_registry.rs
squire_lib/src/rounds/: mod.rs  round_registry.rs
squire_lib/src/scoring/: mod.rs  standard_scoring.rs
squire_lib/src/settings/: general.rs  mod.rs  pairing.rs  scoring.rs
squire_lib/src/tournament/: mod.rs  test_tournament.rs  tournament.rs  tournament_preset.rs  tournament_seed.rs  tournament_status.rs
squire_lib/tests/: determinism.rs  fluid_pairings.rs  matches.rs  registration.rs  settings.rs  swiss_pairings.rs  tourn_sync.rs  tournament.rs  utils.rs
squire_sdk/: Cargo.toml  README.md
squire_sdk/src/: accounts.rs  actor.rs  api.rs  cards.rs  data.rs  error.rs  lib.rs  players.rs  response.rs  tournaments.rs  utils.rs  version.rs
squire_sdk/src/api/: account_rules.rs  mod.rs  request.rs  session.rs  url.rs
squire_sdk/src/api/model/: accounts.rs  mod.rs  session.rs  version.rs
squire_sdk/src/client/: builder.rs  compat.rs  error.rs  import.rs  management_task.rs  mod.rs  network.rs  query.rs  session.rs  simple_state.rs  state.rs  subscription.rs  tournaments.rs  update.rs
squire_sdk/src/client/compat/: mod.rs  native.rs  wasm.rs
squire_sdk/src/compat/: mod.rs  native.rs  wasm.rs
squire_sdk/src/server/: accounts.rs  cards.rs  gathering.rs  mod.rs  session.rs  state.rs  tournaments.rs
squire_sdk/src/server/gathering/: hall.rs  mod.rs  onlooker.rs
squire_sdk/src/server/tests/: init.rs  mod.rs  requests.rs  tournaments.rs  utils.rs
squire_sdk/src/sync/: blockage.rs  collections.rs  decision.rs  error.rs  full_op.rs  manager.rs  messages.rs  mod.rs  op_align.rs  op_log.rs  op_sync.rs  processor.rs  rollback.rs  sync_error.rs  sync_status.rs  tournament_manager.rs  utils.rs
squire_sdk/src/sync/messages/: chain.rs  manager.rs  mod.rs
squire_sdk/src/todo/: README.md  accounts.rs  tournaments.rs
squire_sdk/src/todo/client/: builder.rs  import.rs  management_task.rs  mod.rs  query.rs  update.rs
squire_sdk/src/todo/server/: accounts.rs  players.rs  state.rs
squire_sdk/src/todo/sync/: messages.rs  op_align.rs  op_log.rs  processor.rs  rollback.rs  sync_error.rs  utils.rs
squire_sdk/tests/: mod.rs  sessions.rs  tourn_sync.rs  utils.rs
squire_sdk/tests/client_server/: mod.rs  simple_state.rs  startup.rs  tournaments.rs
squire_sdk/tests/server/: gathering.rs  init.rs  mod.rs  requests.rs  tournaments.rs  utils.rs
squire_tests/: Cargo.toml
squire_tests/src/: lib.rs
squire_view/: .gitignore  Cargo.toml  index.html
squire_view/src/: main.rs
squire_web/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
squire_web/src/: client.rs  header.rs  index.rs  main.rs
squire_web/src/account/: account.rs  login.rs  mod.rs  register.rs
squire_web/src/tournament/: creator.rs  mod.rs  model.rs  overview.rs  pairings.rs  standings.rs  viewer.rs
squire_web/src/tournament/model/: mod.rs
squire_web/src/tournament/overview/: mod.rs
squire_web/src/tournament/pairings/: mod.rs
squire_web/src/tournament/players/: filter.rs  input.rs  mod.rs  scroll.rs  selected.rs
squire_web/src/tournament/rounds/: input.rs  mod.rs  roundchangesbuffer.rs  roundconfirmationticker.rs  roundresultticker.rs  roundupdown.rs  scroll.rs  selected.rs
squire_web/src/tournament/settings/: general.rs  mod.rs  pairings.rs  panel.rs  scoring.rs
squire_web/src/tournament/standings/: mod.rs
squire_web/src/tournament/viewer_component/: mod.rs
squire_web/src/utils/: minitimer.rs  mod.rs  popout.rs  requests.rs
squire_web/src/utils/input/: mod.rs  text.rs  transformer.rs
src/: \  consts.rs  error.rs  ffi.rs  fluid_pairings.rs  game.rs  graphql_main.rs  lib.rs  match_registry.rs  operations.rs  pairing_system.rs  pairings.rs  player.rs  player_registry.rs  round.rs  round_registry.rs  scoring.rs  scoring_system.rs  settings.rs  standard_scoring.rs  standings.rs  swiss_pairings.rs  tournament.rs  tournament_manager.rs  tournament_registry.rs  tournament_settings.rs  utils.rs
