[workspace]
members = [
    "squire_lib",
    "squire_core",
    "squire_tests",
    "squire_sdk",
]

resolver = "2"

# We exclude the frontend so that we can compile it as part of the compilation
# of the backend. Otherwise, there is a deadlock. This is ok since the frontend
# should always be compiled as WASM, so it doesn't share any deps with.
exclude = ["squire_web",
]

[profile.release]
lto = true

# This ensures that when the program crashes a usable stack trace can be generated
[profile.release.package.squire_lib]
debug = true
