[package]
name = "squire_core"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[features]
db-tests = []

[dependencies]
# In-House deps
squire_sdk = { path = "../squire_sdk", features = ["server"] }
cycle_map = { version = "0.1.1", features = ["serde"] }

# Common deps
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
tokio = { version = "1.0", features = ["full"] }
once_cell = { version = "1.13.0" }
dashmap = { version = "5.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
futures = { version = "0.3" }

# Server-specifics
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
axum = { version = "0.6.1", features = ["json", "macros", "headers"]}
async-session = { version = "3.0.0" }
headers = { version = "0.3" }
http = { version = "0.2" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "0.14" }
shuttle-runtime = { version = "0.21", features = [] }
shuttle-shared-db = { version = "0.21", features = ["mongodb"] }
shuttle-axum = { version = "0.21", features = [] }

[dev-dependencies]
# In-house
squire_tests = { path = "../squire_tests" }

tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
