[package]
name = "squire_core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[features]
db-tests = []

[dependencies]
# In-House deps
squire_sdk = { path = "../squire_sdk", features = ["server"] }
cycle_map = { version = "0.2.0", features = ["serde"] }

# Common deps
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.108" }
tokio = { version = "1.33", features = ["full"] }
once_cell = { version = "1.18.0" }
dashmap = { version = "5.5", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
futures = { version = "0.3" }
rand = { version = "0.8" }

# Server-specifics
mongodb = { version = "2.7.0", features = ["tokio-runtime"] }
axum = { version = "0.7.2", features = ["json", "macros"]}
chrono = { version = "0.4", features = ["serde"] }
async-trait = { version = "0.1" }
headers = { version = "0.4" }
http = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.0" }
shuttle-runtime = { version = "0.39", features = [] }
shuttle-shared-db = { version = "0.35", features = ["mongodb"] }
shuttle-axum = { version = "0.35.1", default-features = false, features = ["axum-0-7"] }
tower-http = { version = "0.5", features = ["cors"] }
derive_more = "0.99.17"
sorted-vec = "0.8.3"
fxhash = "=0.2.1"

[dev-dependencies]
# In-house
squire_tests = { path = "../squire_tests" }

tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }

[build-dependencies]
flate2 = "1.0"
