[package]
name = "squire_lib"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "GPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["deck_sites"]
deck_sites = ["mtgjson/deck_sites"]
ffi = ["cbindgen", "libc", "dashmap"]
wasm = ["chrono/wasmbind"]

[dependencies]
#In-house deps
cycle_map = { version = "0.1.1", features = ["serde"] }
mtgjson = { git = "https://github.com/TylerBloom/mtgjson-rust-sdk", rev="979ffccde3b0eecd230c2f067e18383ed804c5f3", default-features = false }
# mtgjson = { path = "../mtgjson-rust-sdk", features = ["deck_sites"] }

uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
once_cell = { version = "1.8.0" }
chrono = { version = "0.4", features = ["serde"] }
itertools = { version = "0.10.0" }
num-rational = { version = "0.4.1", features = ["serde"] }
html-escape = "0.2.12"

dashmap = { version = "5.0", features = ["serde"], optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
cbindgen = { version = "0.20.0", optional = true}
