[package]
name = "squire_lib"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

# The following allows DWARF-4 to work with Rust
dwarf-version = 4

[features]
default = []
deck_sites = ["mtgjson/deck_sites"]

[dependencies]
#In-house deps
cycle_map = { version = "0.1.1", features = ["serde"] }
mtgjson = { git = "https://github.com/TylerBloom/mtgjson-rust-sdk", rev="979ffccde3b0eecd230c2f067e18383ed804c5f3", default-features = false }
# mtgjson = { path = "../mtgjson-rust-sdk", features = ["deck_sites"] }

uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.2" }
once_cell = { version = "1.8.0" }
chrono = { version = "0.4", features = ["serde"] }
itertools = { version = "0.10.0" }
num-rational = { version = "0.4.1", features = ["serde"] }
html-escape = { version = "0.2.12" }
getrandom = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
serde_json = { version = "1.0.68" }
squire_tests = { path = "../squire_tests" }

# This ensures that when the program crashes a usable stack trace can be generated
[profile.release]
debug = true
