[package]
name = "squire_sdk"
version = "0.1.0-pre-alpha.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[features]
deck_sites = ["squire_lib/deck_sites", "mtgjson/hyper", "mtgjson/hyper-tls"]
client = [
  "cookie",
  "reqwest",
  "serde_json",
  "tokio-tungstenite",
  "tokio",
  "futures",
  "postcard",
  "gloo-net",
  "gloo-timers",
]
server = [
  "axum",
  "axum/json",
  "axum/macros",
  "axum/headers",
  "tokio",
  "tokio/full",
  "async-trait",
  "headers",
  "serde_json",
  "rand",
  "cookie",
  "futures",
  "postcard",
]

[dependencies]
# In-House deps
mtgjson = { git = "https://github.com/TylerBloom/mtgjson-rust-sdk", rev = "979ffccde3b0eecd230c2f067e18383ed804c5f3", default-features = false }
squire_lib = { path = "../squire_lib", default-features = false }

# Common deps
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4" }
const_format = { version = "0.2.32" }
array-concat = { version = "0.5.2" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }

# Client || Server deps
cookie = { version = "0.17", optional = true }
serde_json = { version = "1.0.107", optional = true }
futures = { version = "0.3", optional = true }
postcard = { version = "1.0", features = ["alloc"], optional = true }

# Client deps
reqwest = { version = "0.11", features = ["json", "cookies"], optional = true }
cookie_store = { version = "0.20", optional = true }
tokio = { version = "1.33", features = [
  "macros",
  "sync",
], optional = true }

# Server deps
axum = { version = "0.6.20", features = ["ws"], optional = true }
rand = { version = "0.8.5", optional = true }
async-trait = { version = "0.1", optional = true }
headers = { version = "0.3", optional = true }
http = { version = "0.2" }
hex = { version = "0.4" }

# To be moved
hashbag = { version = "0.1.11", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.37" }
gloo-net = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = ["Element", "HtmlCollection", "HtmlDialogElement"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { version = "0.20.1", optional = true }
instant = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Server deps
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
once_cell = { version = "1.18.0" }
dashmap = { version = "5.5" }

[dev-dependencies]
# In-house
squire_tests = { path = "../squire_tests", features = ["squire_sdk"] }

# Common deps

# Client || Server deps

# Client deps
