[package]
name = "squire_sdk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[features]
deck_sites = ["squire_lib/deck_sites", "mtgjson/hyper", "mtgjson/hyper-tls"]
client = [
  "cookie",
  "reqwest",
  "serde_json",
  "tokio-tungstenite",
  "postcard",
  "gloo-net",
]
server = [
  "axum",
  "axum/json",
  "axum/macros",
  "axum/headers",
  "tokio/full",
  "headers",
  "serde_json",
  "cookie",
  "postcard",
]

[dependencies]
# In-House deps
mtgjson = { git = "https://github.com/TylerBloom/mtgjson-rust-sdk", rev = "979ffccde3b0eecd230c2f067e18383ed804c5f3", default-features = false }
squire_lib = { path = "../squire_lib", default-features = false }

# Common deps
http = { version = "0.2" }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4" }
const_format = { version = "0.2.32" }
array-concat = { version = "0.5.2" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1.33", features = [
  "macros",
  "sync",
] }
tokio-stream = { version = "0.1" }
pin-project = { version  = "1.1" }

# Client || Server deps
cookie = { version = "0.17", optional = true }
serde_json = { version = "1.0.108", optional = true }
postcard = { version = "1.0", features = ["alloc"], optional = true }

# Client deps
reqwest = { version = "0.11", features = ["json", "cookies"], optional = true }
cookie_store = { version = "0.20", optional = true }

# Server deps
axum = { version = "0.6.20", features = ["ws"], optional = true }
headers = { version = "0.3", optional = true }

# To be moved
hashbag = { version = "0.1.11", features = ["serde"] }
derive_more = "0.99.17"
hyper = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.37" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = ["Element", "HtmlCollection", "HtmlDialogElement"] }
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }
gloo-net = { version = "0.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", optional = true }
instant = { version = "0.1" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Server deps
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
once_cell = { version = "1.18.0" }
dashmap = { version = "5.5" }

[dev-dependencies]
# In-house
squire_tests = { path = "../squire_tests", features = ["squire_sdk"] }

# Common deps

# Client || Server deps

# Client deps
