[package]
name = "squire_tests"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[dependencies]
#In-house deps
squire_lib = { path = "../squire_lib" }
squire_sdk = { path = "../squire_sdk", optional = true }

uuid = { version = "1.5", features = ["v4"] }
