[package]
name = "squire_web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[profile.release]
lto = true
opt-level="z"
strip = true  # Automatically strip symbols from the binary.
#codegen-units = 1
#panic = "abort"

[dependencies]
# In-House deps
squire_sdk = { path = "../squire_sdk", features = ["client"] }

yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17.0" }
once_cell = { version = "1.17" }
web-sys = { version = "0.3.61", features = ["Element", "HtmlCollection", "HtmlDialogElement"] }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
futures = "0.3.27"
gloo-net = "0.4.0"
async-std = "1.12.0"
chrono = "0.4.24"
tokio = { version = "1.27.0", default-features = false, features = [
  "sync",
] }
