[package]
name = "squire_web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

[profile.release]
lto = true
opt-level="z"
strip = true  # Automatically strip symbols from the binary.
#codegen-units = 1
#panic = "abort"

[dependencies]
# In-House deps
squire_sdk = { path = "../squire_sdk", features = ["client"] }

yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.17.0" }
once_cell = { version = "1.18" }
web-sys = { version = "0.3.64", features = ["Element", "HtmlCollection", "HtmlDialogElement"] }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
gloo-net = "0.3.1"
async-std = "1.12.0"
chrono = "0.4.31"
tokio = { version = "1.33.0", default-features = false, features = [
  "sync",
] }
